cmake_minimum_required(VERSION 2.8.10)
project(gepard-js C CXX)

set(PROJECT_VERSION 0.0.1)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/cmake)

find_package(Gepard)
find_package(JerryScript)
find_package(GLESv2)
find_package(EGL)
find_package(PNG)
find_package(X11)

set(EXTRA_FLAGS "-Wall -pedantic -std=c++11")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_FLAGS}")

set(BINARY_OUTPUT_DIR ${PROJECT_BINARY_DIR}/bin)
set(LIB_OUTPUT_DIR ${PROJECT_BINARY_DIR}/lib)
set(INCLUDE_OUTPUT_DIR ${PROJECT_BINARY_DIR}/include)

file(MAKE_DIRECTORY ${BINARY_OUTPUT_DIR})
file(MAKE_DIRECTORY ${LIB_OUTPUT_DIR})
file(MAKE_DIRECTORY ${INCLUDE_OUTPUT_DIR})

set(GPJS_LIB_DEPENDENCIES ${GEPARD_LIBS} ${JERRYSCRIPT_LIBS} ${GLESv2_LIBRARY} ${EGL_LIBRARY} ${X11_LIBRARIES} ${PNG_LIBRARIES})
set(GPJS_INCLUDE_DEPENDENCIES ${JERRYSCRIPT_INCLUDE_DIR} ${GEPARD_INCLUDE_DIR})

add_subdirectory(src)
